fixed: scrollbars showing up for page titles

--- a/themes/holycupcakes/style.css
+++ b/themes/holycupcakes/style.css
@@ -26,7 +26,7 @@ body {
     display: none;
     clip: unset !important;
     height: auto;
-    overflow: auto;
+    /* overflow: auto; */
     position: unset !important;
     width: auto;
     word-wrap: normal !important;
